--- a/links/index.html
+++ b/links/index.html
@@ -38,6 +38,7 @@
   <li><a href="https://www.youtube.com/@BuildMontage" target="_blank">Build Montage</a></li>
   <li><a href="https://www.youtube.com/@ealanosborne" target="_blank">Ealan Osborne</a></li>
   <li><a href="https://www.youtube.com/@Youthman" target="_blank">Youthman</a></li>
+  <li><a href="https://www.youtube.com/@GeorgeTheaterAtHome" target="_blank">Theater At Home</a></li>
   <li><a href="https://www.youtube.com/@wilsonianmoviemuseum8420" target="_blank">Wilsonian Movie Museum</a></li>
   <li><a href="https://www.youtube.com/@themovievault" target="_blank">The Movie Vault</a></li>
   <li><a href="https://www.youtube.com/@ArrowFilmsUK" target="_blank">Arrow Films</a></li>
