Updated footer logos

--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
 
       <div class="logos">
         <div class="logos-techs">
-          <div><a href="https://www.dolby.com/" target="_blank"><img class="logo-dolby" src="res/logos/Dolby_new.svg"></a></div>
-          <div><a href="https://dts.com/" target="_blank"><img class="logo-dts" src="res/logos/DTS.svg"></a></div>
+          <div><a href="https://www.dolby.com/" target="_blank"><img class="logo-dolby" src="res/logos/Dolby_Atmos.svg"></a></div>
+          <div><a href="https://dts.com/" target="_blank"><img class="logo-dts" src="res/logos/DTS_X.svg"></a></div>
         </div>
         <div class="logos-brands">
+          <div><a href="https://www.lg.com/" target="_blank"><img class="logo-lg" src="res/logos/LG_OLED.png"></a></div>
           <div><a href="https://www.yamaha.com/" target="_blank"><img class="logo-yamaha" src="res/logos/Yamaha.svg"></a></div>
           <div><a href="https://www.daytonaudio.com/" target="_blank"><img class="logo-dayton" src="res/logos/Dayton_Audio.png"></a></div>
           <div><a href="https://intl.onkyo-av.com/" target="_blank"><img class="logo-onkyo" src="res/logos/Onkyo.png"></a></div>
-          <div><a href="https://www.pioneerelectronics.com/" target="_blank"><img class="logo-pioneer" src="res/logos/Pioneer.png"></a></div>
           <div><a href="https://www.sony.com/" target="_blank"><img class="logo-sony" src="res/logos/Sony.png"></a></div>
-          <div><a href="https://www.lg.com/" target="_blank"><img class="logo-lg" src="res/logos/LG.svg"></a></div>
+          <div><a href="https://www.pioneerelectronics.com/" target="_blank"><img class="logo-pioneer" src="res/logos/Pioneer.png"></a></div>
         </div>
         <div class="separator">|</div>
         <div class="logos-social">
