Added tag "noindex" to internal pages

--- a/settings/index.html
+++ b/settings/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Redirecting...</title>
+  <meta name="robots" content="noindex">
   <script type"text/javascript">
     function go() {
       window.location.replace("https://cineminha.vip/m/settings/");
