--- a/links/index.html
+++ b/links/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Cineminha | Home Theater Links</title>
+  <meta name="robots" content="noindex">
   <link rel="shortcut icon" type="image/x-icon" href="../favicon.png">
   <link rel="stylesheet" type="text/css" href="../style.css" />
 </head>
