--- a/m/photos/index.html
+++ b/m/photos/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Cineminha | Photo Albums</title>
+  <meta name="robots" content="noindex">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta charset="utf-8">
   <link rel="shortcut icon" type="image/x-icon" href="../favicon.png">
