--- a/m/index.html
+++ b/m/index.html
@@ -73,15 +73,16 @@
 
     <!-- Footer Logos -->
 
-    <div class="logos">
-      <div class="logos-techs">
-        <div><a href="https://www.dolby.com/" target="_blank"><img class="logo-dolby" src="../res/logos/Dolby_new.svg"></a></div>
-        <div><a href="https://dts.com/" target="_blank"><img class="logo-dts" src="../res/logos/DTS.svg"></a></div>
+    <div class="m-logos">
+      <div class="m-logos-techs">
+        <div><a href="https://www.dolby.com/" target="_blank"><img class="m-logo-dolby" src="../res/logos/Dolby_new.svg"></a></div>
+        <div><a href="https://dts.com/" target="_blank"><img class="m-logo-dts" src="../res/logos/DTS.svg"></a></div>
       </div>
-      <div class="separator">|</div>
-      <div class="logos-social">
-        <div><a href="https://letterboxd.com/tinyhomecinema/"><img class="logo-letterboxd" src="../res/logos/Letterboxd.png" title="Letterboxd"></a></div>
-        <div><a href="https://open.spotify.com/user/314wnduxs6ji5jbi3q3evtxf2lda"><img class="logo-spotify" src="../res/logos/Spotify.png" title="Spotify"></a></div>
+      <div class="m-separator">|</div>
+      <div class="m-logos-social">
+        <div><a href="https://letterboxd.com/tinyhomecinema/"><img class="m-logo-letterboxd" src="../res/logos/Letterboxd.png" title="Letterboxd"></a></div>
+        <div><a href="https://app.tvtime.com/user/75395421/all_shows"><img class="m-logo-tvtime" src="../res/logos/TV_Time.png" title="TV Time"></a></div>
+        <div><a href="https://open.spotify.com/user/314wnduxs6ji5jbi3q3evtxf2lda"><img class="m-logo-spotify" src="../res/logos/Spotify.png" title="Spotify"></a></div>
       </div>
     </div>
 
