--- a/m/index.html
+++ b/m/index.html
@@ -204,7 +204,7 @@
 
   //------- STREAMING SERVICES --------
 
-  var max_initial_number_of_services = 6;
+  var max_initial_number_of_services = 10;
   var initial_number_of_services = max_initial_number_of_services;
 
   var current_services = [];
@@ -253,7 +253,7 @@
 
   var streaming_services = document.getElementById('services-list');
   addCurrentServices();
-  addPastServices();
+  // addPastServices();
 
   var slice_index = 48;
 
@@ -270,7 +270,6 @@
   //------- FILM POSTERS --------
 
   var film_posters = document.getElementById('film-posters');
-  var film_ratings = document.getElementById('film-ratings');
 
   for (var i = 0; i < 5; i++) {
 
