Changed behavior of more present services addition

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
       <div class="links">
         <div class="bottom-links">
-          | <a href="https://letterboxd.com/tinyhomecinema/list/first-watchings/">FIRST SHOWINGS</a> | <a href="https://letterboxd.com/tinyhomecinema/list/rewatchings/">RERUNS</a> | <a href="https://letterboxd.com/tinyhomecinema/films/diary/">DIARY</a> | <a href="https://letterboxd.com/tinyhomecinema/list/watched-blu-rays/">BLU-RAYS</a> | <a href="https://letterboxd.com/tinyhomecinema/tag/film/films/by/month/">FILMS</a> | <a href="https://letterboxd.com/tinyhomecinema/tag/miniseries/films/by/month/">MINISERIES</a> | <a href="https://letterboxd.com/tinyhomecinema/tag/short/films/by/month/">SHORTS</a> | <a href="https://letterboxd.com/tinyhomecinema/tag/anthology/films/by/month/">ANTHOLOGIES</a> | <a href="https://www.themoviedb.org/list/8283956-watched-tv-shows?view=grid">TV SHOWS</a> |<br>
+          | <a href="https://letterboxd.com/tinyhomecinema/list/first-watchings/">FIRST SHOWINGS</a> | <a href="https://letterboxd.com/tinyhomecinema/list/rewatchings/">RERUNS</a> | <a href="https://letterboxd.com/tinyhomecinema/films/diary/">DIARY</a> | <a href="https://letterboxd.com/tinyhomecinema/list/watched-blu-rays/">BLU-RAYS</a> | <a href="https://letterboxd.com/tinyhomecinema/tag/film/films/by/month/">FILMS</a> | <a href="https://letterboxd.com/tinyhomecinema/tag/miniseries/films/by/month/">MINISERIES</a> | <a href="https://letterboxd.com/tinyhomecinema/tag/short/films/by/month/">SHORTS</a> | <a href="https://letterboxd.com/tinyhomecinema/tag/anthology/films/by/month/">ANTHOLOGIES</a> | <a href="https://trakt.tv/users/cineminha/watchlist?sort=released,asc">TV SHOWS</a> |<br>
           <br>| <a href="https://letterboxd.com/tinyhomecinema/list/milestones/detail/">MILESTONES</a> | <a href="https://letterboxd.com/tinyhomecinema/stats/">STATS</a> | <a href="https://letterboxd.com/tinyhomecinema/year/2024/">2024</a> | <a href="https://letterboxd.com/tinyhomecinema/year/2023/">2023</a> | <a href="https://letterboxd.com/tinyhomecinema/year/2022/">2022</a> |
         </div>
       </div>
@@ -169,16 +169,6 @@
 
       </div>
 
-      <!-- Streaming -->
-
-      <div id="streaming" class="streaming">
-        <div id="title-streaming" class="title-grid-right">
-          <div class="title">Streaming</div>
-          <div id="past-services" class="more" onclick="addPastServices(true)">MORE</div>
-        </div>
-
-      </div>
-
       <!-- Media -->
 
       <div id="media" class="media">
@@ -190,6 +180,16 @@
         <h4>Shelves</h4>
         <ul id="shelves">
         </ul>
+
+      </div>
+
+      <!-- Streaming -->
+
+      <div id="streaming" class="streaming">
+        <div id="title-streaming" class="title-grid-right">
+          <div class="title">Streaming</div>
+          <div id="past-services" class="more" onclick="addPastServices(true)">MORE</div>
+        </div>
 
       </div>
 
