--- a/m/index.html
+++ b/m/index.html
@@ -67,7 +67,7 @@
     <!-- Footer Links -->
 
     <div class="links">
-      <div class="bottom-links">| <a href="https://letterboxd.com/tinyhomecinema/list/first-watchings/">FIRST SHOWINGS</a> | <a href="https://letterboxd.com/tinyhomecinema/list/rewatchings/">RERUNS</a> | <a href="https://letterboxd.com/tinyhomecinema/films/diary/">DIARY</a> | <a href="https://letterboxd.com/tinyhomecinema/list/watched-blu-rays/">BLU-RAYS</a> | <a href="https://www.themoviedb.org/list/8283956-watched-tv-shows?view=grid">TV SHOWS</a> |<br>
+      <div class="bottom-links">| <a href="https://letterboxd.com/tinyhomecinema/list/first-watchings/">FIRST SHOWINGS</a> | <a href="https://letterboxd.com/tinyhomecinema/list/rewatchings/">RERUNS</a> | <a href="https://letterboxd.com/tinyhomecinema/films/diary/">DIARY</a> | <a href="https://letterboxd.com/tinyhomecinema/list/watched-blu-rays/">BLU-RAYS</a> | <a href="https://trakt.tv/users/cineminha/watchlist?sort=released,asc">TV SHOWS</a> |<br>
       <br>| <a href="https://letterboxd.com/tinyhomecinema/list/milestones/detail/">MILESTONES</a> | <a href="https://letterboxd.com/tinyhomecinema/stats/">STATS</a> |</div>
     </div>
 
@@ -252,7 +252,7 @@
   moreMedia(false);
 
   var streaming_services = document.getElementById('services-list');
-  addCurrentServices();
+  addCurrentServices(true);
   // addPastServices();
 
   var slice_index = 48;
