--- a/m/index.html
+++ b/m/index.html
@@ -81,8 +81,8 @@
       <div class="m-separator">|</div>
       <div class="m-logos-social">
         <div><a href="https://letterboxd.com/tinyhomecinema/"><img class="m-logo-letterboxd" src="../res/logos/Letterboxd.png" title="Letterboxd"></a></div>
-        <div><a href="https://app.tvtime.com/user/75395421/all_shows"><img class="m-logo-tvtime" src="../res/logos/TV_Time.png" title="TV Time"></a></div>
         <div><a href="https://open.spotify.com/user/314wnduxs6ji5jbi3q3evtxf2lda"><img class="m-logo-spotify" src="../res/logos/Spotify.png" title="Spotify"></a></div>
+        <div><a href="mailto:Cineminha<mail@cineminha.vip>"><img class="m-logo-email" src="../res/icons/email.png" title="Send a message"></a></div>
       </div>
     </div>
 
