--- a/m/index.html
+++ b/m/index.html
@@ -67,7 +67,7 @@
     <!-- Footer Links -->
 
     <div class="links">
-      <div class="bottom-links">| <a href="https://letterboxd.com/tinyhomecinema/list/first-watchings/">FIRST SHOWINGS</a> | <a href="https://letterboxd.com/tinyhomecinema/list/rewatchings/">RERUNS</a> | <a href="https://letterboxd.com/tinyhomecinema/films/diary/">DIARY</a> | <a href="https://letterboxd.com/tinyhomecinema/list/watched-blu-rays/">BLU-RAYS</a> | <a href="https://trakt.tv/users/tinyhomecinema/watchlist?sort=released,asc">TV SHOWS</a> |<br>
+      <div class="bottom-links">| <a href="https://letterboxd.com/tinyhomecinema/list/first-watchings/">FIRST SHOWINGS</a> | <a href="https://letterboxd.com/tinyhomecinema/list/rewatchings/">RERUNS</a> | <a href="https://letterboxd.com/tinyhomecinema/films/diary/">DIARY</a> | <a href="https://trakt.tv/users/tinyhomecinema/watchlist?sort=watched,asc">TV SHOWS</a> | <a href="https://letterboxd.com/tinyhomecinema/list/watched-blu-rays/">BLU-RAYS</a> |<br>
       <br>| <a href="https://letterboxd.com/tinyhomecinema/list/milestones/detail/">MILESTONES</a> | <a href="https://letterboxd.com/tinyhomecinema/stats/">STATS</a> |</div>
     </div>
 
