--- a/m/index.html
+++ b/m/index.html
@@ -67,7 +67,7 @@
     <!-- Footer Links -->
 
     <div class="links">
-      <div class="bottom-links">| <a href="https://letterboxd.com/tinyhomecinema/list/first-watchings/">FIRST SHOWINGS</a> | <a href="https://letterboxd.com/tinyhomecinema/list/rewatchings/">RERUNS</a> | <a href="https://letterboxd.com/tinyhomecinema/films/diary/">DIARY</a> | <a href="https://trakt.tv/users/tinyhomecinema/watchlist>TV SHOWS</a> | <a href="https://letterboxd.com/tinyhomecinema/list/watched-blu-rays/">BLU-RAYS</a> |<br>
+      <div class="bottom-links">| <a href="https://letterboxd.com/tinyhomecinema/list/first-watchings/">FIRST SHOWINGS</a> | <a href="https://letterboxd.com/tinyhomecinema/list/rewatchings/">RERUNS</a> | <a href="https://letterboxd.com/tinyhomecinema/films/diary/">DIARY</a> | <a href="https://trakt.tv/users/tinyhomecinema/watchlist">TV SHOWS</a> |<br>
       <br>| <a href="https://letterboxd.com/tinyhomecinema/list/milestones/detail/">MILESTONES</a> | <a href="https://letterboxd.com/tinyhomecinema/stats/">STATS</a> |</div>
     </div>
 
@@ -249,7 +249,7 @@
 
   var shelves_list = document.getElementById('shelves');
   addMediaItems(shelves, shelves_list, 'shelf');
-  moreMedia(false);
+  //moreMedia(false);
 
   var streaming_services = document.getElementById('services-list');
   addCurrentServices(true);
