Added 'Rogue Custom Home Cinema' to YouTube Channels at links page

--- a/links/index.html
+++ b/links/index.html
@@ -40,6 +40,7 @@
   <li><a href="https://www.youtube.com/@ealanosborne" target="_blank">Ealan Osborne</a></li>
   <li><a href="https://www.youtube.com/@Youthman" target="_blank">Youthman</a></li>
   <li><a href="https://www.youtube.com/@GeorgeTheaterAtHome" target="_blank">Theater At Home</a></li>
+  <li><a href="https://www.youtube.com/@RogueHomeCinema" target="_blank">Rogue Custom Home Cinema</a></li>
   <li><a href="https://www.youtube.com/@wilsonianmoviemuseum8420" target="_blank">Wilsonian Movie Museum</a></li>
   <li><a href="https://www.youtube.com/@themovievault" target="_blank">The Movie Vault</a></li>
   <li><a href="https://www.youtube.com/@ArrowFilmsUK" target="_blank">Arrow Films</a></li>
