--- a/m/settings/tv/index.html
+++ b/m/settings/tv/index.html
@@ -98,7 +98,15 @@
                 <li style="color:grey">Adjust Matrix: 0</li>
                 <li style="color:grey">Adjust Luminance: 0</li>
               </ul>
-              <li style="color:darkgrey">White Balance</li>
+              <li>White Balance</li>
+              <ul>
+                <li>Color Temperature: 0</li>
+                <li style="color:darkgrey">Method: 2 Points</li>
+                <li style="color:darkgrey">Point: High</li>
+                <li style="color:darkgrey">Red: 0</li>
+                <li style="color:darkgrey">Green: 0</li>
+                <li style="color:darkgrey">Blue: 0</li>
+              </ul>
             </ul>
             <br>
             <li>Clarity</li>
@@ -151,7 +159,15 @@
                 <li style="color:grey">Matrix: 0</li>
                 <li style="color:grey">Luminance: 0</li>
               </ul>
-              <li style="color:darkgrey">White Balance</li>
+              <li>White Balance</li>
+              <ul>
+                <li>Color Temperature: 0</li>
+                <li style="color:darkgrey">Method: 2 Points</li>
+                <li style="color:darkgrey">Point: High</li>
+                <li style="color:darkgrey">Red: 0</li>
+                <li style="color:darkgrey">Green: 0</li>
+                <li style="color:darkgrey">Blue: 0</li>
+              </ul>
             </ul>
             <br>
             <li>Clarity</li>
@@ -168,6 +184,67 @@
           </ul>
         </ul>
       </ul>
+
+      <h3>TV (Dolby Vision)</h3>
+
+      <ul>
+        <li><b>Select Mode: Cinema (User)</b></li><br>
+        <li><b>Aspect Ratio: Original</b></li><br>
+        <li><b>Advanced Settings</b></li><br>
+        <ul>
+          <li>Brightness</li>
+          <br>
+          <ul>
+            <li>OLED Pixel Brightness: 80</li>
+            <li>Adjust Contrast: 67</li>
+            <li>Screen Brightness: 53</li>
+            <li>Auto Dynamic Contrast: Off</li>
+            <li>Peak Brightness: High</li>
+            <li style="color:grey">Gama (Adjust Brightness): 2.2</li>
+            <li style="color:grey">Black Level: Limited</li>
+            <li>Motion Eye Care: Off</li>
+          </ul>
+          <br>
+          <li>Color</li>
+          <br>
+          <ul>
+            <li>Color Depth: 53</i>
+              <li style="color:darkgrey">Tint: 0</li>
+              <li style="color:darkgrey">Color Gamut: Native</li>
+              <li style="color:darkgrey">Fine Tune</li>
+              <ul>
+                <li style="color:darkgrey">Color Update: Off</li>
+                <li style="color:grey">Select Color: Red</li>
+                <li style="color:grey">Saturation: 0</li>
+                <li style="color:grey">Matrix: 0</li>
+                <li style="color:grey">Luminance: 0</li>
+              </ul>
+              <li>White Balance</li>
+              <ul>
+                <li>Color Temperature: 0</li>
+                <li style="color:darkgrey">Method: 2 Points</li>
+                <li style="color:darkgrey">Point: High</li>
+                <li style="color:darkgrey">Red: 0</li>
+                <li style="color:darkgrey">Green: 0</li>
+                <li style="color:darkgrey">Blue: 0</li>
+              </ul>
+            </ul>
+            <br>
+            <li>Clarity</li>
+            <br>
+            <ul>
+              <li>Adjust Sharpness: 20</li>
+              <li>Super Resolution: Off</li>
+              <li>Noise Reduction: Auto</li>
+              <li>MPEG Noise Reduction: Auto</li>
+              <li>Smoot Gradation: Low</li>
+              <li>Cinema Screen: On</li>
+              <li>TruMotion: Off</li>
+            </ul>
+          </ul>
+        </ul>
+      </ul>
+
       <br>
 
       <h2>Sound</h2>
