--- a/index.html
+++ b/index.html
@@ -356,18 +356,16 @@
       var url = films[i][2];
       var img = films[i][3];
       var film = document.createElement('DIV');
-      var link = document.createElement('A');
-      link.setAttribute('href', url);
       var poster = document.createElement('IMG');
+      var alt_text = title.concat(" (").concat(year).concat(")");
       poster.setAttribute('src', img);
       poster.setAttribute('width', '85');
       poster.setAttribute('style', 'border-radius: 3px');
-
-      var alt_text = title.concat(" (").concat(year).concat(")");
+      poster.setAttribute('style', 'cursor: pointer');
       poster.setAttribute('alt', alt_text);
       poster.setAttribute('title', alt_text);
-      link.appendChild(poster);
-      film.appendChild(link);
+      addListenerToPoster(poster, url);
+      film.appendChild(poster);
       film_posters.append(film);
 
     }
